<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="40dp"

    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true"

        >
        <LinearLayout
            android:id="@+id/llRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp">
            <de.hdodenhof.circleimageview.CircleImageView

                android:id="@+id/imgCandidate"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/avatar"
                android:contentDescription="@string/candidate_image"
                app:civ_border_color="@color/accent"
                app:civ_border_width="2dp"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/candidate"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtParty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/party_name"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>