<?xml version="1.0" encoding="UTF-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="#FFFFFF"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:paddingTop="2dp"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal|center_vertical"
        app:srcCompat="@drawable/votersignupimg" />


    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/s_i_g_n_u_p"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayour1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aadhar_number"
            app:startIconDrawable="@drawable/ic_baseline_credit_card_24"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/voteraadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayour2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            app:endIconMode="clear_text"
            app:prefixText="+91"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"

            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/voterPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="phone"
            />
        </com.google.android.material.textfield.TextInputLayout>



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/votersignupbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_bg1"
                android:text="@string/get_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="5dp"
                />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/secondary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/voterlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:text="@string/login"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>