<?xml version="1.0" encoding="UTF-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="#FFFFFF"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">


    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->

    <!--        android:layout_width="45dp"-->
    <!--        android:layout_height="45dp"-->
    <!--        android:background="@drawable/home"-->
    <!--        />-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal|center_vertical"
        app:srcCompat="@drawable/voterloginimg" />


    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/l_o_g_i_n"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="30dp"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:startIconDrawable="@drawable/ic_baseline_phone_24"
            app:endIconMode="clear_text"
            app:prefixText="+91"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:id="@+id/voterPhone"
            android:inputType="phone"
            />


</com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/voterloginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg1"
                android:text="@string/get_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
             />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/new_user"
                android:textColor="@color/secondary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/votersignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:text="@string/sign_up"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>