<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepageimg"
    >


    <ImageView
        android:id="@+id/textviewdialog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_menu_24"
        android:elevation="11dp"
        />






    <RelativeLayout


        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/topcurve"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".58"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        >

        <LinearLayout

            android:layout_width="320dp"
            android:layout_height="310dp"
            android:layout_centerInParent="true"
            android:background="@drawable/dialogbox_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/welcome_to_voteasy"
                android:textColor="#000000"
                android:textSize="28sp" />


            <TextView
                android:id="@+id/votingmadeeasytxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="7dp"
                android:text="@string/voting_made_easy"
                android:textColor="@color/secondary_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/voterbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_bg6"
                android:text="@string/voter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                app:iconGravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adminbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_bg6"
                android:text="@string/admin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                app:iconGravity="end"

                />
        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>