<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialogbox_background"
    android:elevation="30dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/candidate_profile_img"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/avatar"
        app:civ_border_color="@color/primary"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        />

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/profilechangebtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/candidate_profile_img"
        app:layout_constraintEnd_toEndOf="@+id/candidate_profile_img"
        android:src="@drawable/camera"
        app:civ_border_color="@color/primary"
        app:civ_border_width="2dp"


         />


    <TextView
        android:id="@+id/candidate_form_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:paddingStart="11dp"
        android:paddingEnd="11dp"
        android:text="@string/add_candidate"
        android:textColor="@color/primary_text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candidate_profile_img"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:hint="@string/enter_name"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candidate_form_title"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".90"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/candidate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="25" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textinputlayour2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"


        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:hint="@string/party_name"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout1"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".90"
        app:startIconDrawable="@drawable/ic_baseline_group_24"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/partyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="25" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textinputlayour3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"


        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:hint="@string/about"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="150"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textinputlayour2"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".90"
        app:startIconDrawable="@drawable/ic_baseline_library_books_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:maxLength="150" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/candidateActionbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg2"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textinputlayour3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayour3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".30" />


</androidx.constraintlayout.widget.ConstraintLayout>




